--- a/src/App.Web/project.json
+++ b/src/App.Web/project.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "Microsoft.AspNet.Mvc": "0.1-alpha-*",
         "Microsoft.AspNet.StaticFiles": "0.1-alpha-*",
+        "Microsoft.AspNet.SignalR.Server": "0.1-alpha-*",
         "Nowin.vNext": ""
     },
     "commands": {
